@@ -1,4 +1,5 @@
 3.2
+ * (cqlsh) allow setting TTL with COPY (CASSANDRA-9494)
  * Fix EstimatedHistogram creation in nodetool tablehistograms (CASSANDRA-10859)
  * Establish bootstrap stream sessions sequentially (CASSANDRA-6992)
  * Sort compactionhistory output by timestamp (CASSANDRA-10464)
